[package]
name = "webauthn-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = {version="0.3.19", features = ["fmt","env-filter"]}

